# kintera

./: .bumpversion.cfg  .env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  FULL_KINETICS_SUPPORT_PLAN.md  IMPLICIT_INTEGRATION_GAP_ANALYSIS.md  ION_CHEMISTRY_SUPPORT_PLAN.md  KINETICS_BASE_TITAN_GAP_STATUS.md  README.md  REFACTOR_SCHEMA.html  build_image.sh  configure.h.in  docker-compose.yaml  gen_func1_table.py  plan.md  pyproject.toml  setup.py  start_container.sh
cmake/: cuda_memory.cmake  parameters.cmake
dashboard/: index.html  make_figures.py  make_matching_review.py  matching.html
diagnostic_tools/: build_report.py  disort_vs_kb_actinic.py  kb_state_rate_diff.py  rate_diff.py  snapshot_transport_balance.py  system_rate_gap_survey.py  transport_gap_magnitude.py  transport_vs_kb.py
diagnostics/: ch4_full_rhs_mirror.py  compare_gch4.py  moses00_actinic_flux.py  moses00_flux_compare.py  moses00_kb_rate_constants.py  moses00_match.py  moses00_perturb.py  moses00_perturb_L60.py  moses00_photo_rates.py  moses00_prodloss.py  moses00_rate_compare.py  moses00_ss_html.py  moses00_transport_audit.py  no_grain_stability.py  stage5_core_photo_check.py
docker/: Dockerfile  entrypoint.sh  entrypoint.sh.sav1  entrypoint.sh.sav2  entrypoint.sh.sav3  entrypoint.sh.sav5
docs/: kinetics_api.md
examples/: earth_example.py  equilibrium_nasa9.py  equilibrium_nasa9.yaml  example_chapman_cycle.py  example_earth.py  example_jupiter.py  plot_atm2d_steady_advection_diffusion.py  plot_atm2d_steady_diffusion_dirichlet_2d.py  test_type_hints.py
paper_figures/: README.md  fig_chapman_match.py
(+394 files in other folders)
