[build-system]
requires = [
  "setuptools>=61.0.0",
  "setuptools-scm>=8",
  "wheel",
  "build",
  "pyharp>=2.0.0,<2.1.0",
  "torch>=2.7.0,<2.8.0",
  "ninja",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "kintera"
dynamic = ["version"]
description = "Atmospheric Chemistry and Thermodynamics Library"
authors = [
  { name="Cheng Li", email="chengcli@umich.edu" },
  { name="Sihe Chen", email="sihechen@caltech.edu"},
]
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pyharp>=2.0.0,<2.1.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/chengcli/kintera"
Documentation = "https://kintera.readthedocs.io"

[tool.setuptools]
packages = ["kintera", "kintera.api"]
include-package-data = false

[tool.setuptools.package-data]
"kintera" = ["kintera/**/*", "lib/*.so", "lib/*.dylib", "*.pyi", "py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
